cleaning the data in NoiseRemover

--- a/Code/src/.classpath
+++ b/Code/src/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/ani/Github/Thesis/Code/commons-io-2.6/commons-io-2.6.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
